Fix little z-index modal bug.

--- a/assets/scss/components/_modal.scss
+++ b/assets/scss/components/_modal.scss
@@ -10,7 +10,7 @@
  * -------------------------------------------------------------------------- */
 .dialog-overlay {
   position: fixed;
-  z-index: 2;
+  z-index: 20;
   top: 0;
   left: 0;
   bottom: 0;
@@ -25,7 +25,7 @@
   padding: 32px;
   max-width: 90%;
   width: 600px;
-  z-index: 3;
+  z-index: 30;
   background: #FFFFFF;
   transform: translate(-50%, -50%);
   box-shadow: 0 2px 8px 0 rgba(201, 120, 120, 0.12), 0 2px 12px 0 rgba(0,0,0,0.16);
